==> micropython/micropython/ports/gd32vf103/pin.c <==
#include <stdint.h>
#include <stdio.h>
#include "py/runtime.h"
#include "extmod/virtpin.h"
#include "pin.h"

static const pin_obj_t *pin_find(mp_obj_t user_obj) {
    // If pin is SMALL_INT
    if (mp_obj_is_small_int(user_obj)) {
        uint value = MP_OBJ_SMALL_INT_VALUE(user_obj);

        if (value >= MP_ARRAY_SIZE(pin_base)) {
            mp_raise_msg_varg(&mp_type_ValueError,
                MP_ERROR_TEXT("Pin(%u) doesn't exist"), value);
        }
        return &pin_base[value];
    }

    // If a pin was provided, then use it
    if (mp_obj_is_type(user_obj, &pin_type)) {
        return MP_OBJ_TO_PTR(user_obj);
    }

    const char *str = mp_obj_str_get_str(user_obj);
    int pin = pin_parse(str);

    if (pin > 0) {
        return &pin_base[pin];
    }

    mp_raise_msg_varg(&mp_type_ValueError, MP_ERROR_TEXT("Pin('%s') doesn't exist"), str);
}

STATIC mp_obj_t pin_obj_init_helper(const pin_obj_t *self, size_t n_args, const mp_obj_t *pos_args, mp_map_t *kw_args) {
    static const mp_arg_t allowed_args[] = {
        { MP_QSTR_mode, MP_ARG_REQUIRED | MP_ARG_INT, {.u_obj = MP_OBJ_NULL} },
        { MP_QSTR_value, MP_ARG_OBJ, {.u_obj = MP_OBJ_NULL} },
    };

    // parse args
    mp_arg_val_t args[MP_ARRAY_SIZE(allowed_args)];
    mp_arg_parse_all(n_args, pos_args, kw_args, MP_ARRAY_SIZE(allowed_args), allowed_args, args);

    // get pin
    gpio_pin_t pin = pin_from_obj(self);

    // get mode
    uint mode = args[0].u_int;
    if (mode > 0xfU || mode == 0xcU) {
        mp_raise_msg_varg(&mp_type_ValueError, MP_ERROR_TEXT("invalid pin mode: %u"), mode);
    }

    // enable the peripheral clock for the port of this pin
    gpio_pin_clock_enable(pin);

    // if given, set the pin value before initialising to prevent glitches
    if (args[1].u_obj != MP_OBJ_NULL) {
        if (mp_obj_is_true(args[1].u_obj)) {
            gpio_pin_set(pin);
        } else {
            gpio_pin_clear(pin);
        }
    }

    // configure the GPIO as requested
    gpio_pin_config(pin, mode);

    return mp_const_none;
}

STATIC void pin_print(const mp_print_t *print, mp_obj_t self_in, mp_print_kind_t kind) {
    static const qstr pin_mode_name[16] = {
        MP_QSTR_IN_ANALOG,
        MP_QSTR_PP_10MHZ,
        MP_QSTR_PP_2MHZ,
        MP_QSTR_PP_50MHZ,
        MP_QSTR_IN_FLOAT,
        MP_QSTR_OD_10MHZ,
        MP_QSTR_OD_2MHZ,
        MP_QSTR_OD_50MHZ,
        MP_QSTR_IN_PULL,
        MP_QSTR_AF_PP_10MHZ,
        MP_QSTR_AF_PP_2MHZ,
        MP_QSTR_AF_PP_50MHZ,
        0, // reserved
        MP_QSTR_AF_OD_10MHZ,
        MP_QSTR_AF_OD_2MHZ,
        MP_QSTR_AF_OD_50MHZ,
    };
    const pin_obj_t *self = MP_OBJ_TO_PTR(self_in);
    gpio_pin_t pin = pin_from_obj(self);

    mp_printf(print, "Pin('%c%u', mode=Pin.%q, value=%u)",
        'A' + gpio_pin_port_nr(pin), gpio_pin_nr(pin),
        pin_mode_name[gpio_pin_mode(pin)],
        !!gpio_pin_get(pin));
}

STATIC mp_obj_t pin_call(mp_obj_t self_in, size_t n_args, size_t n_kw, const mp_obj_t *args) {
    mp_arg_check_num(n_args, n_kw, 0, 1, false);
    const pin_obj_t *self = MP_OBJ_TO_PTR(self_in);
    gpio_pin_t pin = pin_from_obj(self);

    if (n_args == 0) {
        // get pin
        return MP_OBJ_NEW_SMALL_INT(!!gpio_pin_high(pin));
    } else {
        // set pin
        if (mp_obj_is_true(args[0])) {
            gpio_pin_set(pin);
        } else {
            gpio_pin_clear(pin);
        }
        return mp_const_none;
    }
}

STATIC mp_uint_t pin_ioctl(mp_obj_t self_in, mp_uint_t request, uintptr_t arg, int *errcode) {
    const pin_obj_t *self = MP_OBJ_TO_PTR(self_in);
    gpio_pin_t pin = pin_from_obj(self);

    switch (request) {
        case MP_PIN_READ:
            return !!gpio_pin_high(pin);
        case MP_PIN_WRITE:
            if (arg) {
                gpio_pin_set(pin);
            } else {
                gpio_pin_clear(pin);
            }
            return 0;
    }
    return -1;
}
